--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,5 @@
 CLIENT_ID=
 CLIENT_SECRET=
 REDIRECT_URI=http://localhost:8000/callback
+FRONT_END_SERVER="http://localhost:3000"
 REDIS_URL=redis://localhost:6379/0
